<resources>
    <string name="app_name">Money</string>
    <string name="categories">Categories: </string>
    <string name="chart">Chart</string>
    <string name="total">Total:</string>
    <string name="add_category">Add a new Category</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="overview">Overview</string>
    <string name="piechartcolor">piechartColor</string>
    <string name="add_expense">Add a new Expense</string>
    <string name="amount">Amount</string>
    <string name="description_optional">Add a Date or Description (optional)</string>
</resources>
