<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sheez.admin.mymoneytracker.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="73dp">

    <ImageButton
        android:id="@+id/overviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/overview"
        android:onClick="ShowListOverview"
        android:src="@drawable/list_img"
        app:layout_constraintRight_toLeftOf="@+id/chartButton"
        app:layout_constraintTop_toTopOf="@+id/chartButton" />

    <ImageButton
        android:id="@+id/chartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/chart"
        android:onClick="ShowChartOverview"
        android:src="@drawable/chart_img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/total"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalTextView"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/chartButton"
        app:layout_constraintLeft_toRightOf="@+id/totalLabel"
        app:layout_constraintRight_toLeftOf="@+id/overviewButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="96dp"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="Categories"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTextView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="6dp"
        android:background="?android:attr/listDivider"
        android:padding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/categoriesGridView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.687"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


    <GridView
        android:id="@+id/categoriesGridView"
        android:layout_width="0dp"
        android:layout_height="523dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="119dp"
        android:drawSelectorOnTop="false"
        android:gravity="center"
        android:numColumns="2"
        android:overScrollMode="ifContentScrolls"
        android:padding="10dp"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>